# Polaris

./: .gitignore  README.md  polaris.yaml  pyproject.toml
benchmarks/: scorer.py
benchmarks/questions/: __init__.py
docs/: GITHUB.md  PRD.md  TDD.md
experiments/: era5_pipeline_test.py  pollution_baseline.py  run_pollution_test.py
methods/: index.yaml
projects/_template/: project.yaml
skills/: README.md
skills/zhangcy-literature-review/: SKILL.md  test-prompts.json
skills/zhangcy-literature-review/references/: api-examples.md  search-strategies.md
skills/zhangcy-literature-review/scripts/: generate_review_template.py
skills/zhangcy-nature-review-simple/: README.md  SKILL.md  test-prompts.json
skills/zhangcy-nature-review-simple/references/: checklist.md
skills/zhangcy-nature-review-strict/: SKILL.md  test-prompts.json
skills/zhangcy-paper-reader/: SKILL.md  test-prompts.json
skills/zhangcy-paper-reader/references/: api-examples.md
skills/zhangcy-paper-reader/scripts/: fetch_paper.py
skills/zhangcy-python-coding/: SKILL.md  test-prompts.json
skills/zhangcy-python-coding/references/: code_review.md
skills/zhangcy-research-search/: SKILL.md  test-prompts.json
skills/zhangcy-research-search/references/: routing-guide.md
skills/zhangcy-research-search/scripts/: save_to_zotero.py
skills/zhangcy-slide-content-builder/: SKILL.md  test-prompts.json
skills/zhangcy-slide-designer/: SKILL.md  test-prompts.json
skills/zhangcy-wechat-clipper/: SKILL.md  test-prompts.json
src/polaris/: __init__.py
src/polaris/cli/: main.py
(+38 files in other folders)
